_assets/css/main.scss
//= require_self
//= require katex/dist/katex

$fa-font-path: "/assets/fonts";
$font-family-sans-serif: Roboto, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
$font-family-serif: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
$font-family-monospace: "Roboto Mono", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
$font-size-h1: 2rem;
$font-size-h2: 1.8rem;
$font-size-h3: 1.6rem;
$font-size-h4: 1.4rem;
$font-size-h5: 1.2rem;
$font-size-h6: 1rem;
$link-color: #da4939;
$link-hover-color: $link-color;
$link-color-dark: #c23324;
$navbar-footer-bg: #272935;
$navbar-footer-color: #ffffff;
$primary: $link-color;

@import "bootstrap/scss/bootstrap";
@import "font-awesome/scss/font-awesome";

@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Roboto+Mono");

html {
    position: relative;
    min-height: 100%;
}

img.center {
    display: block;
    margin: 0 auto;
}

.container {
    min-width: 320px;
    max-width: 950px;
}

.navbar {
    font-family: $font-family-monospace;
    color: $navbar-footer-color;
    background-color: $navbar-footer-bg;

    .navbar-brand {
        color: $navbar-footer-color;
        font-size: 20px;
    }

    .nav-item {
        margin-left: 20px;

        .nav-link {
            color: $link-color !important;
        }

        &.active {
            .nav-link {
                color: $link-color-dark !important;
            }
        }
    }

    .nav-link {
        font-size: 16px;

        a {
            color: inherit !important;
            text-transform: capitalize;
            margin-left: 2px;
        }
    }
}

@include media-breakpoint-up(md) {
    .navbar {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        z-index: 1000;
    }

    body {
        margin-top: 65px;
    }
}


.content {
    padding-top: 1rem;
    padding-bottom: 1rem;

    .article {
        h1, h2, h3, h4, h5, h6 {
            &.article-heading {
                &:before {
                    content: '#';
                    color: $link-color;
                    font-size: 0.85em;
                    margin-right: 0.15em;
                }
            }
        }

        h1, h2 {
            &.article-heading {
                &:after {
                    content: '';
                    display: block;
                    border: 0.5px solid $navbar-footer-bg;
                }
            }
        }
    }

    .article-heading-badge {
        font-size: 0.6em;
    }

    .article-title {
        text-weight: bold;
    }
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    font-family: $font-family-monospace;
    font-size: 13px;
    color: $navbar-footer-color;
    background-color: $navbar-footer-bg;
    padding: 2rem 0;

    h6 {
        padding: 10px 0;
        font-size: 20px;
        text-transform: uppercase;

        &::before {
            content: '';
            position: absolute;
            top: 0;
            width: 2em;
            height: 2px;
            overflow: hidden;
            background-color: $navbar-footer-color;
        }
    }

    .copyright {
        @include make-col-ready;
        @include make-col(6);

        order: 1;
    }

    .contact {
        @include make-col-ready;
        @include make-col(6);

        order: 2;
        text-align: left;

        ul {
            padding: 0 0 10px 0;
        }

        li {
            display: inline-block;

            > a {
                display: inline-block;
                width: 32px;
                height: 32px;
                border-radius: 0.25em;
                color: $navbar-footer-bg;
                background-color: $navbar-footer-color;
                transition: color 0.2s;
                transition: background-color 0.2s;

                &:hover {
                    color: $navbar-footer-color;
                    background-color: $link-color;
                    text-decoration: none;
                }

                .fa {
                    font-size: 16px;
                    width: 32px;
                    line-height: 32px;
                    text-align: center;
                }
            }
        }
    }

    @include media-breakpoint-down(sm) {
        text-align: center;

        .copyright {
            @include make-col(12);

            order: 2;
            text-align: center;

            > h6 {
                display: none;
            }
        }

        .contact {
            @include make-col(12);

            order: 1;
            text-align: center;
        }
    }
}

body {
    margin-bottom: 200px;
}

@include media-breakpoint-down(sm) {
    body {
        margin-bottom: 250px;
    }
}


.pub-authors {
    font-size: large;
}

.pub-heading {
    font-weight: bold;
}

.pub-abstract {
    padding-bottom: 1rem;
}

.pub-bibtex {
    font-family: $font-family-monospace;
    white-space: pre;
    word-wrap: normal;
    overflow-wrap: normal;
    overflow-x: scroll;
}

.pub-venue-journal, .pub-venue-conf {
    font-style: italic;
}

.pub-info {
    margin-bottom: 5px;

    &:last-child {
        margin-bottom: 0px;
    }
}

.pub-links {
    .btn {
        margin-right: 10px;

        &:last-child {
            margin-right: 0px;
        }
    }
}

.katex-display {
    margin-bottom: 1rem;
    margin-top: 1rem;
    text-align: center;
    font-size: 1.5em;
}

// Force selection of entire .katex/.katex-display blocks.
.katex, .katex-display {
    user-select: all;
    -moz-user-select: all;
    -webkit-user-select: all;
    -ms-user-select: all;
}

@import "syntax";

